--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
   },
   "dependencies": {
     "express": "^4.16.3",
-    "helmet": "^3.12.0",
+    "sqlite3": "^4.0.0",
     "knex": "^0.14.6",
-    "sqlite3": "^4.0.0"
+    "cors": "^2.8.4",
+    "helmet": "^3.12.0"
   }
 }
